[package]
name = "rust-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.15.2"
solana-program = "1.15.2"
solana-sdk = "1.15.2"
borsh = "0.9.1"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git", version = "0.1.0" }
